First commit after fork

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "vue-typescript--rxjs",
+  "name": "vue-to-react-typescript--rxjs",
   "version": "1.0.0",
-  "description": "A fork of vue-typescript--vuex, replacing Vuex state management with a set of module services maintaining RxJS BehaviorSubjects",
+  "description": "A fork of vue-typescript--rxjs, demonstrating a conversion of the boilerplate codebase from Vue.js to React, while still utilizing Typescript, RxJS and material design components",
   "main": "index.js",
   "scripts": {
     "build": "webpack",
@@ -19,25 +19,25 @@
   "license": "Apache-2.0",
   "dependencies": {},
   "devDependencies": {
+    "@types/material-ui": "^0.21.0",
+    "@types/react": "^16.0.38",
+    "@types/react-dom": "^16.0.4",
+    "@types/react-intl": "^2.3.5",
+    "@types/react-router-dom": "^4.2.4",
+    "awesome-typescript-loader": "^3.5.0",
     "css-loader": "^0.28.1",
-    "extract-text-webpack-plugin": "^2.1.2",
-    "less": "^2.7.3",
-    "less-loader": "^4.0.5",
+    "material-ui": "^0.20.0",
     "node-sass": "^4.5.3",
     "npm-run-all": "^4.0.2",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-intl": "^2.4.0",
+    "react-router-dom": "^4.2.2",
     "rxjs": "^5.5.6",
     "sass-loader": "^6.0.6",
+    "source-map-loader": "^0.2.3",
     "style-loader": "^0.18.2",
-    "ts-loader": "^2.0.3",
-    "typescript": "^2.3.2",
-    "vue": "^2.5.2",
-    "vue-class-component": "^6.0.0",
-    "vue-i18n": "^7.4.2",
-    "vue-loader": "^12.0.3",
-    "vue-property-decorator": "^6.0.0",
-    "vue-router": "^3.0.1",
-    "vue-rx": "^5.0.0",
-    "vue-template-compiler": "^2.5.2",
+    "typescript": "^2.7.2",
     "webpack": "^2.5.0",
     "webpack-dev-server": "^2.5.0"
   }
