--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
         "target": "es5",
         "experimentalDecorators": true,
         "allowSyntheticDefaultImports": true,
-        "strictPropertyInitialization": false
+        "strictPropertyInitialization": false,
+        "jsx": "react"
     },
     "include": [
         "./src/**/*"
