--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "Apache-2.0",
   "dependencies": {},
   "devDependencies": {
+    "@types/lodash": "^4.14.119",
     "@types/material-ui": "^0.21.0",
     "@types/react": "^16.0.38",
     "@types/react-dom": "^16.0.4",
@@ -26,6 +27,7 @@
     "@types/react-router-dom": "^4.2.4",
     "awesome-typescript-loader": "^3.5.0",
     "css-loader": "^0.28.1",
+    "lodash": "^4.17.11",
     "material-ui": "^0.20.0",
     "node-sass": "^4.5.3",
     "npm-run-all": "^4.0.2",
